fix: fixed several issues after code review
